updated guide template

--- a/notebooks/guide_template.ipynb
+++ b/notebooks/guide_template.ipynb
@@ -2,8 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e49bbab1-a8d7-456b-be4c-e25b625aa1ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import clearn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff092ba7-a7a1-4796-af65-146cca4f36a9",
    "metadata": {},
    "outputs": [],
    "source": []
